--- a/directive/boolean.html
+++ b/directive/boolean.html
@@ -1,35 +1,26 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": {
-          "uri": "#template",
-          "style": "style"
-      },
-      "style": "#style",
-      "demo": {
-          "uri": "./boolean_demo.html",
-          "type": "string"
-      }
-    }
-  </script>
-  <template id="template">
-    <h2>${ $['directive.boolean'] }</h2>
-    <div class="content">
-      <template $each="$['directive.boolean.sections']">
-        <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
-      </template>
+<h2>${ $['directive.boolean'] }</h2>
+<div class="content">
+  <template $exist="language == 'zh-cn'">
+    <h3 class="question">布尔指令的作用</h3>
+    <div class="answer">布尔指令用于对宿主元素的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Attributes#%E5%B8%83%E5%B0%94%E5%80%BC%E5%B1%9E%E6%80%A7">布尔值属性</a>进行绑定。</div>
+    <h3 class="question">布尔指令表达式的执行结果</h3>
+    <div class="answer">
+      <div>布尔指令表达式的执行结果将转换为布尔值后绑定到元素的属性（property）上。</div>
+      <div>当转换后的执行结果为true时，在宿主元素上添加同名的布尔属性，否则移除此布尔属性。</div>
+      <div>请注意，元素的property是小驼峰方式命名的，而指令名由全小写字符组成。为匹配含有大写字符的property，部分指令名需要进行<a href="miscellaneous/encode">转码</a>。dagger.js将中横线“-”作为大小写转码标记，为绑定宿主元素的“readOnly”属性，您需要将指令名声明为“$read-only”。</div>
+      <div>我们来看下面的例子：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] boolean directive (IDL)" src="https://codepen.io/dagger8224/embed/LYQLaWp?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/LYQLaWp">
+          [dagger-demo] boolean directive (IDL)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
     </div>
   </template>
-  <style id="style" type="dagger/style">
-    h3::before {
-        content: "😕";
-        margin-right: 10px;
-    }
-    .answer::before {
-        content: "😄";
-        margin-right: 10px;
-    }
-  </style>
-</html>
+  <template $exist="language == 'en-us'">
+    <template $each="$['directive.boolean.sections']">
+      <h3 class="question">${ item.question }</h3>
+      <div class="answer" $html="item.answer"></div>
+    </template>
+  </template>
+</div>
