--- a/directive/general.html
+++ b/directive/general.html
@@ -15,7 +15,7 @@
       </div>
     </div>
   </template>
-  <template $exist="language == 'zh-cn'">
+  <template $exist="language == 'en-us'">
     <template $each="$['directive.general.sections']">
       <h3 class="question">${ item.question }</h3>
       <div class="answer" $html="item.answer"></div>
