--- a/directive/focus.html
+++ b/directive/focus.html
@@ -5,8 +5,8 @@
     <div class="answer">focus指令用于为宿主元素设置焦点。</div>
     <h3 class="question">$focus指令表达式的执行结果</h3>
     <div class="answer">当指令表达式返回true或者其他等效值时宿主元素将获取焦点。</div>
-    <h3 class="question">$focus指令与autofocus属性的关系</h3>
-    <div class="answer">当宿主元素上声明$focus指令之后，元素上的autofocus属性声明将失效。</div>
+    <h3 class="question">$focus指令的预定义修饰符</h3>
+    <div class="answer">$focus指令支持布尔类型的预定义修饰符prevent，用于指定<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/focus">是否将获取焦点的元素滚动到当前浏览器视窗中</a>。</div>
     <h3 class="question">$focus指令示例</h3>
     <div class="answer">下面我们来看$focus指令的示例。
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $focus directive" src="https://codepen.io/dagger8224/embed/abqWRKx?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
