--- a/directive/general.html
+++ b/directive/general.html
@@ -2,7 +2,7 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">一般指令的作用</h3>
-    <div class="answer">一般指令用于对宿主元素的一般属性进行绑定。指令的名称与元素属性名相同。例如，$id用来设定宿主元素的id。</div>
+    <div class="answer">一般指令用于绑定宿主元素的普通同名属性。例如，您可以使用$id绑定宿主元素的id属性。</div>
     <h3 class="question">一般指令表达式的执行结果</h3>
     <div class="answer">
       <div>一般指令表达式的执行结果将转换为字符串后赋值给宿主元素的同名属性。</div>
