--- a/directive/value.html
+++ b/directive/value.html
@@ -15,9 +15,9 @@
       </div>
       <h3 class="question">$value指令的预定义修饰符</h3>
       <div class="answer">$value指令支持如下预定义修饰符：
-        <div class="margin">1. “number”，用于将用户输入字符串转换为数字格式。</div>
-        <div class="margin">2. “trim”，用于去除用户输入字符串的首尾空白字符。</div>
-        <div class="margin">3. “input”，框架默认在输入框失去焦点后将用户输入字符串更新到指令表达式的执行结果上（监听change事件），声明该修饰符的指令将监听输入框的input事件，在用户输入任意字符后立刻触发表达式更新。</div>
+        <div class="margin">1. “number”，布尔类型。用于将用户输入字符串转换为数字格式。</div>
+        <div class="margin">2. “trim”，布尔类型。用于去除用户输入字符串的首尾空白字符。</div>
+        <div class="margin">3. “input”，布尔类型。框架默认在输入框失去焦点后将用户输入字符串更新到指令表达式的执行结果上（监听change事件），声明该修饰符的指令将监听输入框的input事件，在用户输入任意字符后立刻触发表达式更新。</div>
         <div>我们来看下修饰符使用的例子：
           <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/mdXwvXy?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
             See the Pen <a href="https://codepen.io/dagger8224/pen/mdXwvXy">
