--- a/directive/unloading.html
+++ b/directive/unloading.html
@@ -2,10 +2,9 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">+unloading指令的作用</h3>
-    <div class="answer">
-      <div>“+unloading”指令在宿主元素从DOM树移除之前（卸载中阶段）由框架触发调用，用于对宿主元素或者作用域变量进行清理操作（清除不再需要的timerId等）。</div>
-      <div>dagger.js不会对“+unloading”指令表达式的计算结果进行后续处理。</div>
-    </div>
+    <div class="answer">“+unloading”指令在宿主元素从DOM树移除之前（卸载中阶段）由框架触发调用，用于对宿主元素或者作用域变量进行清理操作（清除不再需要的timerId等）。</div>
+    <h3 class="question">+unloading指令的执行结果</h3>
+    <div class="answer">dagger.js不会对“+unloading”指令表达式的执行结果进行进一步处理。</div>
     <h3 class="question">+unloading指令示例</h3>
     <div class="answer">
       <div>下面我们来看一个+unloading指令的示例。</div>
