--- a/directive/each.html
+++ b/directive/each.html
@@ -7,7 +7,7 @@
       <div class="answer">$each指令将先于其宿主元素上所有的生命周期方法和其他控制指令执行。</div>
       <h3 class="question">$each指令表达式的执行结果</h3>
       <div class="answer">
-        <div>当$each指令的计算结果是一个可迭代数据结构时，框架会以其宿主元素（包含其子级元素）作为模板循环渲染出多个元素实例，并基于循环体内容为每个元素实例创建一个新的作用域变量。这个新的作用域变量下定义了如下几个字段：</div>
+        <div>当$each指令的计算结果是一个可迭代数据结构时，框架会以其宿主元素（包含其子级元素）作为模板循环渲染出多个元素实例，并基于循环体内容为每个元素实例创建一个新的切片作用域变量。这个切片作用域变量下定义了如下几个字段：</div>
         <div class="margin">“item”，任意类型，指向循环体子项数据内容。</div>
         <div class="margin">“index”，整数类型，指向子项数据在循环体中的索引。</div>
         <div class="margin">“key”，字符串类型，指向子项数据在父级数据中的字段名。</div>
@@ -19,13 +19,16 @@
           </iframe>
         </div>
       </div>
-      <h3 class="question">$each指令修饰符</h3>
-      <div class="answer">上述字段名可以使用<a href="directive/decorator">指令修饰符</a>进行修改。我们来看下面的例子：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/LYQxyOZ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/LYQxyOZ">
-          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
+      <h3 class="question">$each指令的预定义修饰符</h3>
+      <div class="answer">$each指令支持如下预定义修饰符：
+        <div class="margin">1. “root”，布尔类型。root为true代表当前指令创建的切片作用域直接继承自<a href="directive/scope">根作用域</a>而非其父级作用域。</div>
+        <div class="margin">2. 上文中提到的切片作用域下的“item”、“index”和“key”三个字段都可以使用同名修饰符重新命名以避免命名冲突。我们看下面的例子：
+          <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/LYQxyOZ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+            See the Pen <a href="https://codepen.io/dagger8224/pen/LYQxyOZ">
+            Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+            on <a href="https://codepen.io">CodePen</a>.
+          </iframe>
+        </div>
       </div>
       <h3 class="question">$each嵌套使用示例</h3>
       <div class="answer">不同宿主元素上声明的$each指令可以嵌套使用，下面是一个例子：
@@ -43,3 +46,4 @@
       </template>
   </template>
 </div>
+    
