--- a/directive/focus.html
+++ b/directive/focus.html
@@ -4,9 +4,15 @@
     <h3 class="question">$focus指令的作用</h3>
     <div class="answer">focus指令用于为宿主元素设置焦点。</div>
     <h3 class="question">$focus指令表达式的执行结果</h3>
-    <div class="answer">当指令表达式返回true或者其他等效值时宿主元素将获取焦点。</div>
+    <div class="answer">
+      <div>当指令表达式返回true或者其他等效值时宿主元素将获取焦点。</div>
+      <div>当该指令表达式的内容是合法的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">左表达式</a>时，用户对宿主元素的操作将导致表达式计算结果同步变化，实现作用域数据与DOM元素属性之间的的双向绑定。</div>
+    </div>
     <h3 class="question">$focus指令的预定义修饰符</h3>
-    <div class="answer">$focus指令支持布尔类型的预定义修饰符prevent，用于指定<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/focus">是否将获取焦点的元素滚动到当前浏览器视窗中</a>。</div>
+    <div class="answer">$focus指令支持如下两个修饰符：
+      <div class="margin">1. “oneway”，布尔类型。值为true代表当前指令是单向绑定的，用户对宿主元素的操作不会更新关联的作用域数据。</div>
+      <div class="margin">2. “prevent”，布尔类型。值为true代表<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/focus">将获取焦点的元素滚动到当前浏览器视窗中</a>。</div>
+    </div>
     <h3 class="question">$focus指令示例</h3>
     <div class="answer">下面我们来看$focus指令的示例。
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $focus directive" src="https://codepen.io/dagger8224/embed/abqWRKx?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
