--- a/directive/loading.html
+++ b/directive/loading.html
@@ -10,7 +10,7 @@
       <div>如果“+loading”指令表达式的执行结果不是平凡对象或代理对象，则不会创建新的自定义作用域。</div>
     </div>
     <h3 class="question">+loading指令的预定义修饰符</h3>
-    <div class="answer">“+loading”指令支持布尔类型的预定义指令修饰符root，用于声明当前指令创建出的作用域变量直接继承自<a href="directive/scope">根作用域</a>而非其父级作用域。</div>
+    <div class="answer">“+loading”指令支持布尔类型的预定义指令修饰符root，root为true代表当前指令创建的自定义作用域直接继承自<a href="directive/scope">根作用域</a>而非其父级作用域。</div>
     <h3 class="question">+loading指令示例</h3>
     <div class="answer">下面我们来看一个+loading指令的示例。</div>
     <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +loading" src="https://codepen.io/dagger8224/embed/wvyoepB?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
