--- a/directive/selected.html
+++ b/directive/selected.html
@@ -34,6 +34,15 @@
         </iframe>
       </div>
       <div>当$selected指令表达式的内容是合法的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">左表达式</a>时，用户对宿主元素的操作将导致表达式计算结果同步变化，实现作用域数据与DOM元素属性之间的的双向绑定。</div>
+    </div>
+    <h3 class="question">$selected指令的预定义修饰符</h3>
+    <div class="answer">$selected指令支持值为布尔类型的修饰符“oneway”。值为true代表当前指令是单向绑定的，用户对宿主元素的操作不会更新关联的作用域数据。示例如下：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $selected directive (oneway decorator)" src="https://codepen.io/dagger8224/embed/MWQvjNb?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/MWQvjNb">
+        [dagger-demo] $selected directive (oneway decorator)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
     <h3 class="question">$selected指令与$checked指令的关系</h3>
     <div class="answer">
       <div>$selected指令绑定到选中项的值，而$checked指令绑定的是宿主元素的选中状态。</div>
