--- a/overview/install.html
+++ b/overview/install.html
@@ -63,12 +63,14 @@
       <div class="margin">3. 插入一个style标签（可选），用于隐藏尚未渲染完成的html内容：
         <div class="code">&lt;style&gt;[dg-cloak] { display: none !important; }&lt;/style&gt;</div>
       </div>
-      <div>完成了！现在您已经创建好了第一个dagger.js<a href="overview/application">应用程序</a>（参见下面代码窗口中的html内容）。接下来让我们继续了解如何为应用程序添加代码。</div>
-      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] the empty entry page" src="https://codepen.io/dagger8224/embed/ZErWBpB?default-tab=html&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-        See the Pen <a href="https://codepen.io/dagger8224/pen/ZErWBpB">
-        [dagger-demo] the empty entry page</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-        on <a href="https://codepen.io">CodePen</a>.
-      </iframe>
+      <div>完成了！现在您已经创建好了第一个dagger.js<a href="overview/application">应用程序</a>：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] the empty entry page" src="https://codepen.io/dagger8224/embed/ZErWBpB?default-tab=html&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/ZErWBpB">
+          [dagger-demo] the empty entry page</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+        接下来让我们继续了解如何为应用程序添加代码。
+      </div>
     </div>
   </div>
 </template>
