--- a/directive/dynamic.html
+++ b/directive/dynamic.html
@@ -8,6 +8,8 @@
     </div>
     <h3 class="question">控制指令实例列表</h3>
     <div class="answer"><a class="margin" href="directive/checked">$checked</a><a class="margin" href="directive/class">$class</a><a class="margin" href="directive/each">$each</a><a class="margin" href="directive/exist">$exist</a><a class="margin" href="directive/file">$file</a><a class="margin" href="directive/focus">$focus</a><a class="margin" href="directive/html">$html</a><a class="margin" href="directive/result">$result</a><a class="margin" href="directive/selected">$selected</a><a class="margin" href="directive/style">$style</a><a class="margin" href="directive/text">$text</a><a class="margin" href="directive/value">$value</a><a class="margin" href="directive/watch">$watch</a><a class="margin" href="directive/boolean">布尔指令</a><a class="margin" href="directive/general">一般指令</a></div>
+    <h3 class="question">控制指令的宿主元素</h3>
+    <div class="answer">除去文档中特别说明的情况之外，控制指令可应用于除html标签外的所有元素。</div>
     <h3 class="question">控制指令的触发条件</h3>
     <div class="answer">
       <div>控制指令（<a href="directive/each">“$each”</a>和<a href="directive/exist">“$exist”</a>指令除外）将在宿主元素进入加载完成阶段后首次触发执行。</div>
@@ -18,7 +20,6 @@
           [dagger-demo] responsive dependency</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
-        当input元素的值发生变化时，span上指令“$text”的表达式（依赖了作用域下的变量“a”和“b”）将重新触发执行。
       </div>
     </div>
   </template>
